overflow fixes for mobile

--- a/client/core_styles/base.less
+++ b/client/core_styles/base.less
@@ -34,6 +34,9 @@ ul, ol {
 
 body {
   font-family: 'Roboto', sans-serif;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
 .btn {
