--- a/client/core_styles/layout.less
+++ b/client/core_styles/layout.less
@@ -28,11 +28,11 @@
   }
 
   .l-wrapper_extended {
-    -webkit-transform: translate3d(100%, 0, 0);
-    -moz-transform: translate3d(100%, 0, 0);
-    -ms-transform: translate3d(100%, 0, 0);
-    -o-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
+    -webkit-transform: translateX(100%);
+    -moz-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
+    transform: translateX(100%);
     -webkit-transition: -webkit-transform 500ms ease;
     -moz-transition: -moz-transform 500ms ease;
     -o-transition: -o-transform 500ms ease;
@@ -98,6 +98,7 @@
     position: absolute;
     left: -100%;
     top:0;
+    overflow: hidden;
     width:100%;
     height:100%;
     z-index: 2;
